[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "config-crypt"
version = "1.0.0"
description = "AES-256-GCM 配置文件加密/解密命令行工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42.0.0",
]

[project.scripts]
config-crypt = "cryptotool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptotool*"]
